[gd_scene load_steps=11 format=3 uid="uid://cvyifgfcn6h34"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_3fhsw"]
[ext_resource type="Texture2D" uid="uid://djeenui7qwhu4" path="res://assets/sprites/bunny.png" id="2_gv7bb"]
[ext_resource type="PackedScene" uid="uid://274q48wo4um8" path="res://scenes/kill_zone.tscn" id="3_x51t6"]
[ext_resource type="PackedScene" uid="uid://bwnmfy4o7oy0n" path="res://scenes/health_bar.tscn" id="4_ej55j"]
[ext_resource type="Script" path="res://scenes/CollisionShape2D.gd" id="5_1chog"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3br1a"]
atlas = ExtResource("2_gv7bb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryfu5"]
atlas = ExtResource("2_gv7bb")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_46vth"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3br1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryfu5")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fus2r"]
size = Vector2(20.25, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_ygv7g"]
radius = 17.0

[node name="Boss_Bunny" type="Node2D"]
script = ExtResource("1_3fhsw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_46vth")
autoplay = "default"
frame = 1
frame_progress = 0.459774
flip_h = true

[node name="KillZone" parent="." instance=ExtResource("3_x51t6")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_fus2r")

[node name="RayCast_Right" type="RayCast2D" parent="."]
position = Vector2(6, 11)
target_position = Vector2(8, 0)

[node name="RayCast_Left" type="RayCast2D" parent="."]
position = Vector2(-8, 11)
target_position = Vector2(-6, 0)

[node name="HealthBar" parent="." instance=ExtResource("4_ej55j")]
position = Vector2(-399, 42)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 12)
shape = SubResource("CircleShape2D_ygv7g")
script = ExtResource("5_1chog")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
